# pygamesilent

./: .coveragerc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/pygamesilent/: __init__.py  skeleton.py
tests/: conftest.py  test_env_absent.py  test_env_present.py  test_exports.py  test_silent.py  test_skeleton.py
